@@ -3754,13 +3754,8 @@ static void OnMenuOpen(WindowInfo& win)
     // Prepare the file filters (use \1 instead of \0 so that the
     // double-zero terminated string isn't cut by the string handling
     // methods too early on)
-#ifdef BUILD_DJVU_ENGINE
     ScopedMem<TCHAR> fileFilter(Str::Format(_T("%s\1*.pdf;*.xps;*.djvu;*.cbz;*.cbr\1%s\1*.pdf\1%s\1*.xps\1%s\1*.djvu\1%s\1*.cbz;*.cbr\1%s\1*.*\1"),
         _TR("All supported documents"), _TR("PDF documents"), _TR("XPS documents"), _TR("DjVu documents"), _TR("Comic books"), _TR("All files")));
-#else
-    ScopedMem<TCHAR> fileFilter(Str::Format(_T("%s\1*.pdf;*.xps;*.cbz;*.cbr\1%s\1*.pdf\1%s\1*.xps\1%s\1*.cbz;*.cbr\1%s\1*.*\1"),
-        _TR("All supported documents"), _TR("PDF documents"), _TR("XPS documents"), _TR("Comic books"), _TR("All files")));
-#endif
     Str::TransChars(fileFilter, _T("\1"), _T("\0"));
 
     OPENFILENAME ofn = {0};
